syntax = "proto3";

package user;

option go_package = "github.com/HugoW5/grpc-microservices/userpb";

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  string id = 1;
  string name = 2;
}
